--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 body { 
     font-size: 16px; /* Default Font Size */
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("../img/bank.jpg");
+    background-image: url("../img/bank_2.jpg");
 }
 
 p {
@@ -99,6 +99,10 @@ button:active {
 /***************************************************************************************
     Log In Page
 ****************************************************************************************/
+.background_login {
+    background-image: url("../img/bank_1.jpg");
+}
+
 .login_title {
     width: 30%;
     margin: 10px auto;
@@ -230,6 +234,25 @@ main .menu_bar ul li {
 
 .web_body {
     width: 80%;
-    border: 1px #b3e6e6 solid; /* just for identify the body*/
+    /* border: 1px #b3e6e6 solid; just for identify the body */
     float: right;
+}
+
+/***************************************************************************************
+    Home Page Body
+****************************************************************************************/
+
+.balance_table {
+    border-collapse: collapse;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.balance_table_label {
+    padding: 15px 20px 15px 5px;
+}
+
+.balance_table_data {
+    padding: 15px 5px 15px 100px;
+    text-align: end;
 }
