Completed Modify User Page

--- a/css/main.css
+++ b/css/main.css
@@ -275,3 +275,11 @@ main .menu_bar ul li {
 .view_table_data {
     padding: 15px 300px 15px 150px;
 }
+
+/***************************************************************************************
+    Modify User Body
+****************************************************************************************/
+
+.modify_user {
+    font-weight: bold;
+}
