--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
     font-size: 16px; /* Default Font Size */
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("../img/bank_2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 p {
