--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,14 @@ header .user_header .user_full_name {
     font-weight: bold;
     font-size: 25px;
     text-align: right;
-    padding-bottom: 25px;
+    padding-bottom: 5px;
+}
+
+header .user_header .last_login {
+    color:wheat;
+    text-align: right;
+    font-size: 20px;
+    padding-bottom: 20px;
 }
 
 /***************************************************************************************
